# shiro

./: .eslintrc.json  .gitignore  LICENSE.md  README.md  jest.config.js  next.config.js  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: code-coverage.yml  pr-self-hosted.yml  pr-title-checker.yaml  pr.yml  publish-self-hosted.yaml  publish.yaml
scripts/: exec_versions.js  gen_lcov_report.sh  package-lock.json  package.json
src/: styles.scss
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: conn.rs  filemgr.rs  main.rs  pass.rs  pgp.rs  wallet.rs
src/components/: btc.jsx  const.js  footer.jsx  lang.jsx  layout.jsx  locales.js  navbar.jsx  sign.jsx  toast.js  unlock.jsx  util.js
src/locales/en/: common.json  intro.json  maintenance.json  signer.json  step1.json  step2.json  step3.json
src/locales/id/: common.json  intro.json  maintenance.json  signer.json  step1.json  step2.json  step3.json
src/pages/: _app.jsx  _document.jsx  index.jsx  maintenance.jsx  signer.jsx  step1.jsx  step2.jsx  step3.jsx
tests/: components.test.js  mocks.js  pages.test.js  sign.test.js  signer.test.js  step1.test.js  translation.test.js  utils.test.js
